--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using Blazored.LocalStorage
+@inject ILocalStorageService LocalStorage
 
 <MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" Theme="_theme" />
 <MudDialogProvider />
@@ -7,7 +9,7 @@
 <MudLayout>
     <MudAppBar Style="@_appBarBackgroundColorCSS">
         <MudHidden Breakpoint="Breakpoint.MdAndUp">
-            <MudIconButton OnClick="DrawerToggle" Icon="@Icons.Rounded.Notes" Color="Color.Inherit" Edge="Edge.Start" />
+            <MudIconButton OnClick="DrawerToggle" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
             <div class="flex-grow-1"></div>
             <NavLink ActiveClass="d-flex" href="/">
                 <SmallTaskForceLogo />
@@ -19,10 +21,7 @@
             <NavLink ActiveClass="d-flex me-4" href="/">
                 <SmallTaskForceLogo/>
             </NavLink>
-            <MudButton Variant="Variant.Text" Style="text-transform:none" Href="/#software-development">Software services</MudButton>
-            <MudButton Variant="Variant.Text" Style="text-transform:none" Href="">Automation</MudButton>
-            <MudButton Variant="Variant.Text" Style="text-transform:none" Href="">Smart home</MudButton>
-            <MudButton Variant="Variant.Text" Style="text-transform:none" >Contact us</MudButton>
+           
         
         <MudSpacer />
 
